# mockserver

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  config.yaml
.github/workflows/: rust.yml
responses/: user_response.json
src/: authentication.rs  config.rs  handler.rs  lib.rs  main.rs  rate_limit.rs  server.rs
src/tests/: handler_test.rs
tests/: handler_test.rs  rate_limit_tests.rs
