[package]
name = "mockserver"
version = "0.1.3"
edition = "2024"
authors = ["Eduardo Santos <eduf.santos@mail.com>"]
repository = "https://github.com/sfeSantos/mockserver"
description = "A lightweight, file-based mock API server written in Rust."
license = "MIT OR Apache-2.0"
keywords = ["mock", "rest", "api", "mockserver"]
categories = ["development-tools::testing", "web-programming::http-server"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full"] }
warp = "0.3.7"
anyhow = "1.0.97"
bytes = "1.10.1"
base64 = "0.22.1"
serde_json = "1.0.140"
clap = { version = "4.5.32", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"